--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 10%;
   padding-bottom: 5%;
 }
 .menus{
@@ -34,6 +34,13 @@
   transform: scale(1.3);
 }
 .small-title{
+    padding-top: 5px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 0.9rem;
+    text-align: center;
+}
+.section-text{
     padding-top: 5px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
