--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,9 @@
   text-align: center;
 }
 #photo-card-body{
-  padding-bottom:30%;
+  padding-bottom:15%;
+  padding-right:15%;
+  padding-left:15%;
   padding-top: 0;
   height: auto;
 }
@@ -64,20 +66,20 @@
 
 }
 .main-image{
-  content: url('https://rawcdn.githack.com/damian0577/ebay/6b6a2eb37da91baa64004c5b8d00b372bf8527ce/angle.png');
+  content: url('https://imageshack.com/i/pn0KX3Afp');
   display: block;
   align-content: center;
-  max-width: 90%;
-  max-height: 90%;
-  width: 80%;
-  height: 80;
+  max-width: 80%;
+  max-height: 80%;
+  height: 70%;
+  width: 70%;
   margin: auto;
   transition-duration: .5s;
 }
 .image{
   position: absolute;
-  height: 20%;
-  width: 20%;
+  height: 15%;
+  width: auto;
   display: block;
   -webkit-appearance: none;
   cursor: pointer;
@@ -87,22 +89,22 @@
 }
 
 #image1{
-  content: url('https://rawcdn.githack.com/damian0577/ebay/b423ebe8a3c628508a53fb36135bb3a224af8acd/bottom.png');
+  content: url('https://imageshack.com/i/pmPU1Kibp');
   right: 50%;
   transform: translate(-70%, 0)
 }
 #image3{
-  content: url('https://rawcdn.githack.com/damian0577/ebay/b423ebe8a3c628508a53fb36135bb3a224af8acd/top.png');
+  content: url('https://imageshack.com/i/poqmdnobp');
   right: 50%;
   transform: translate(170%, 0)
 }
 #image2{
-  content: url('https://rawcdn.githack.com/damian0577/ebay/6b6a2eb37da91baa64004c5b8d00b372bf8527ce/angle.png');
+  content: url('https://imageshack.com/i/pn0KX3Afp');
   right: 50%;
   transform: translate(50%, 0)
 }
 
 
-#image1:checked ~ .main-image {content: url('https://rawcdn.githack.com/damian0577/ebay/6b6a2eb37da91baa64004c5b8d00b372bf8527ce/bottom.png');}
-#image2:checked ~ .main-image {content: url('https://rawcdn.githack.com/damian0577/ebay/6b6a2eb37da91baa64004c5b8d00b372bf8527ce/angle.png');}
-#image3:checked ~ .main-image {content: url('https://rawcdn.githack.com/damian0577/ebay/6b6a2eb37da91baa64004c5b8d00b372bf8527ce/top.png');}
+#image1:checked ~ .main-image {content: url('https://imageshack.com/i/pmPU1Kibp');}
+#image2:checked ~ .main-image {content: url('https://imageshack.com/i/pn0KX3Afp');}
+#image3:checked ~ .main-image {content: url('https://imageshack.com/i/poqmdnobp');}
